@@ -13,11 +13,9 @@ Depends: R (>= 3.0.0), BatchJobs (>= 1.7)
 Imports: backports, utils, stats, checkmate (>= 1.8.5), BBmisc (>=
         1.11), DBI, RSQLite (>= 2.0), data.table (>= 1.9.6)
 Suggests: plyr, randomForest, rpart, testthat
-LazyData: yes
-ByteCompile: yes
-Version: 1.4.2
-RoxygenNote: 6.0.1
+Version: 1.4.3
+RoxygenNote: 7.1.2
 NeedsCompilation: no
-Packaged: 2017-11-30 14:00:23 UTC; lang
+Packaged: 2022-03-21 10:39:59 UTC; michel
 Repository: CRAN
-Date/Publication: 2017-11-30 18:10:29 UTC
+Date/Publication: 2022-03-21 11:00:02 UTC
