@@ -1,7 +1,7 @@
-4069e643c78e8af89f83bb19fd6b800b *DESCRIPTION
+17f4b2d11d7c2c6a29ff30c65036f5d3 *DESCRIPTION
 fab2752fb0ac109a20fce81749417043 *LICENSE
 2f9f6a88bd1145d0c9ee74a78dd601d1 *NAMESPACE
-260afc282d86f44ce033e35cceef57d2 *NEWS
+c1a951a384302b701fd4b7e17eac2203 *NEWS
 b677d3e48bcc212584b235bd87481816 *R/Algorithm.R
 bed2877706d6b333bb83de6ee26f4937 *R/Experiment.R
 82ea20fba76342296fd1d9d1b45931c5 *R/ExperimentRegistry.R
@@ -22,8 +22,8 @@ d68c24874fcb286392a6617ff2077450 *R/generateProblemInstance.R
 56915c449dd3bc663b136ab88fc607ce *R/getProblem.R
 f2dcb1ae5f8a22a5f0e51dca8e539e3e *R/getProblemIds.R
 c35e1873f1d6fda793ea6c048a58322a *R/helpers.R
-bef3e6942af0b4da08ba534f4301b92b *R/reduceResultsExperiments.R
-8cd9941d309131daa54a4bad576a2fa1 *R/reduceResultsExperimentsParallel.R
+6ec4bf59832227f01f62acc621de117b *R/reduceResultsExperiments.R
+cbc7b7f9cd4961b62f264d0ee4e59e40 *R/reduceResultsExperimentsParallel.R
 2f537ca656e257c98c09e242b7b5e350 *R/removeAlgorithm.R
 fd8a29d35c866ce4cda66bbd598ba6ab *R/removeExperiments.R
 f94430266b1128c76ba92e33be8b5bcf *R/removeProblem.R
@@ -31,35 +31,35 @@ f94430266b1128c76ba92e33be8b5bcf *R/removeProblem.R
 733a1e3d965432eb7cc4f67dae31156d *R/summarizeExperiments.R
 efad55b24ff1d9525a7cfffce8359cf3 *R/testJob.R
 9d2479836d06c2637347d049bd68e613 *R/updateExperimentRegistry.R
-64d23cb05a180811a80f962da7f0614d *R/zzz.R
-a86aaa34f4ead86527148c226a28a4c9 *inst/CITATION
-3e5b5baec3085bfd09dcce3d1b156110 *man/BatchExperiments.Rd
+c7794c2d6023a20ef3d959b41730afe7 *R/zzz.R
+63393cfa5b65fb3754d7c15dbc5ca37f *inst/CITATION
+6d188536a081718775ce27ac9203d41e *man/BatchExperiments.Rd
 e83657c2aa0ed798e6830a64339226bd *man/ExperimentJob.Rd
-abfd76e799f4dd709f2d3d46d6128a47 *man/addAlgorithm.Rd
-6c7b6757861267c29dcbb98d892d674b *man/addExperiments.Rd
-1854bdbedff0484359b0f5ce45af6a65 *man/addProblem.Rd
-0dc535d5a0531ac92392ed21e0f5317b *man/findExperiments.Rd
+0d0e12e52627330e268bcfe92839b4e6 *man/addAlgorithm.Rd
+b754c8556edaa7097eab3945b5169684 *man/addExperiments.Rd
+0f0a3e21d282212dd38113a538c64d83 *man/addProblem.Rd
+0f0b2536d852c4c3a7e8026f927df186 *man/findExperiments.Rd
 f1b84698ab7ecdcd83c4abc036280a5a *man/generateProblemInstance.Rd
-d2595678f498a3334a664c0a233105b6 *man/getAlgorithm.Rd
-405e3ecf2bfd1ec8d91206f9ec69d8ab *man/getAlgorithmIds.Rd
-87ea5637f4f490f6ffe4dbb9bdb4a76e *man/getExperimentParts.Rd
-7fb3df4c20f6edcd2018161e07798d74 *man/getIndex.Rd
-a6e6c8aa8fc9bf09f989d48c8c378939 *man/getJobs.ExperimentRegistry.Rd
-4f12f0ae02416592efc42e435b74ccb3 *man/getProblem.Rd
-4d7acbf423973dcf3ba9bd34c631f035 *man/getProblemIds.Rd
+8e621c448e4579e9afe3ffcff85ed41f *man/getAlgorithm.Rd
+6afdfbd8443183869b3345299275145c *man/getAlgorithmIds.Rd
+f41b21a3b25e67cf1b02eefe226c3e3d *man/getExperimentParts.Rd
+80ce6e3036bfc5ae2338dbf3444727da *man/getIndex.Rd
+4f86a1369b7b29d2fe270ceef6f9e052 *man/getJobs.ExperimentRegistry.Rd
+96c058b65cb8009db04ce4d97bdeef03 *man/getProblem.Rd
+6621157d9dbc92455058195427949036 *man/getProblemIds.Rd
 c2e3494e18fa2a102bc5c2d8e9512d56 *man/getResultVars.Rd
 1e2edc93ab325420d74941001e303c49 *man/makeDesign.Rd
-6dbfed0be34f7b3e71c8c0e5224159d6 *man/makeExperimentRegistry.Rd
-321e6bdce03dfa6617a210d0444f37ac *man/reduceResultsExperiments.Rd
-c3d3e7d4fec5df0ccbb9ac79809fd7b7 *man/reduceResultsExperimentsParallel.Rd
-728ae478de186fe6057f34a75f2b5667 *man/removeAlgorithm.Rd
-a1e158154d33e2a06398cb364669b947 *man/removeExperiments.Rd
-1b4f60d04a9998ee717c0ebc85484d1e *man/removeProblem.Rd
+a535d1ecae39868c5acc606f2f5def28 *man/makeExperimentRegistry.Rd
+e3845b5ce9e2ce00af2e788f5fd69af0 *man/reduceResultsExperiments.Rd
+db0dacbcdd09f9dd145ccdfc3cad31b1 *man/reduceResultsExperimentsParallel.Rd
+171584d453cd33ed26e5f3f16df0af3a *man/removeAlgorithm.Rd
+8ce17c3ff7dbcd3205cc8adb467f0292 *man/removeExperiments.Rd
+9ea2f4ff74dfc415e93514239a9f0f3b *man/removeProblem.Rd
 96ba0dc9510216eeb04aea4b3d343062 *man/summarizeExperiments.Rd
 f4d5b92042397a6122cc2c77e1e3dd6b *tests/run-all.R
 efb123e86783377bea68484769b51191 *tests/testthat/helpers.R
 d339827c8e45fc1ec6aa397435d946d8 *tests/testthat/test_ExperimentRegisty.R
-f002b2b304e13c6bc53986ed8e7f0925 *tests/testthat/test_addExperiments.R
+8d5799f54323a1817debe95846279289 *tests/testthat/test_addExperiments.R
 ac6e08d89c6383a456425fa292e0d705 *tests/testthat/test_designs.R
 7a3404aa5f4a8541dd235ddde16ad23f *tests/testthat/test_findExperiments.R
 c94f86aef1a14a9542dc065673dd3d0f *tests/testthat/test_getIndex.R
