@@ -1,4 +1,8 @@
-#' The BatchExperiments package
+#' @title The BatchExperiments package
+#'
+#' @description
+#' Extends the BatchJobs package to run statistical experiments on
+#' batch computing clusters.
 #'
 #' @section Additional information:
 #'
