@@ -20,8 +20,11 @@ Id of algorithm.}
 The requested object is loaded from disk.
 }
 \seealso{
-Other get: \code{\link{getAlgorithmIds}},
-  \code{\link{getExperimentParts}},
-  \code{\link{getJobs.ExperimentRegistry}},
-  \code{\link{getProblemIds}}, \code{\link{getProblem}}
+Other get: 
+\code{\link{getAlgorithmIds}()},
+\code{\link{getExperimentParts}()},
+\code{\link{getJobs.ExperimentRegistry}()},
+\code{\link{getProblemIds}()},
+\code{\link{getProblem}()}
 }
+\concept{get}
