@@ -1,3 +1,6 @@
+BatchExperiments_1.4.3
+- Maintenance release. Removed calls to deprecated `default.stringAsFactors()`.
+
 BatchExperiments_1.4.2
 - Added support for read-only mode of registries. See ?loadRegistry for more
   information.
